# Flow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  ersberejmajDocumentsFlow git log  git  sbom.cdx.json
.github/workflows/: deploy-backend.yml  deploy-database.yml  deploy-frontend.yml  docker-build-backend.yml  docker-build-base.yml  docker-build-frontend.yml  docker-build.yml
backend/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.slim  README.md  entrypoint.sh  gitleaks.default.toml  pom.xml  requirements.txt
backend/volnerability-check-main/: .env.example  README.md  pyproject.toml
backend/volnerability-check-main/scripts/: smoke_test.py
backend/volnerability-check-main/src/analysis/: analyzer.py  dependency_resolver.py  pipeline.py  preprocessor.py  prompts.py  retrieval.py
backend/volnerability-check-main/src/core/: client.py  config.py  models.py  vectorstore.py
backend/volnerability-check-main/src/io/: json.py  xlsx.py
backend/volnerability-check-main/src/testing/: quality_checker.py  smoke_tests.py
backend/volnerability-check-main/src/utils/: cli.py  llm.py  load_setting.py  web_research.py
config/: environments.json
dev/: Dockerfile  nginx-dev.conf
examples/bamboo/: README.md
frontend/: .dockerignore  Dockerfile  README.md  angular.json  entrypoint.sh  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx-http.conf  nginx.conf  proxy.conf.json
frontend/src/: declarations.d.ts  index.html
llm/: README.md  docker-compose.yaml
(+700 files in other folders)
