[tool.poetry]
name = "vulnerability-check"
version = "0.1.0"
description = "A tool to analyze GitHub repositories for vulnerabilities using RAG."
authors = ["Cledar"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
typing-extensions = "^4.12.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.4"
tree-sitter = "^0.23.2"
tree-sitter-language-pack = "^0.9.0"
faiss-cpu = "^1.8.0"
openai = "^1.35.13"
tenacity = "^8.5.0"
tqdm = "^4.66.4"
tiktoken = "^0.5.1"
psutil = "^5.9.0"
scikit-learn = "^1.7.1"
pandas = "^2.3.1"
psycopg2-binary = "^2.9.10"
langfuse = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
